Fix content jumping

--- a/src/styles/subsocial.scss
+++ b/src/styles/subsocial.scss
@@ -1220,10 +1220,6 @@ hr {
     position: relative;
     z-index: 0;
 
-    &.DfSectionLarger {
-      max-width: calc(890px + #{$space_normal} * 2);
-    }
-
     .DfSectionOuter {
       width: 100%;
     }
